syntax = "proto3";
import "p2p/proto/common.proto";

option go_package = "github.com/NethermindEth/juno/p2p/starknet/spec";

// optimized for flat storage, not through a trie (not sharing key prefixes)
message ContractStoredValue {
    Felt252 key = 1;
    Felt252 value = 2;
}

message ContractDiff {
    Address  address                    = 1;
    optional Felt252 nonce              = 2;  // Present only if the nonce was updated
    optional Hash class_hash            = 3;  // Present only if the contract was deployed or replaced in this block.
    optional bool is_replaced           = 4;  // Present only if the contract was deployed or replaced, in order to determine whether the contract was deployed or replaced.
    repeated ContractStoredValue values = 5;
    uint32   domain                     = 6;  // volition state domain
}

message StateDiffsRequest {
    Iteration iteration = 1;
}

// Responses are sent ordered by the order given in the request.
message StateDiffsResponse {
    // All of the messages related to a block need to be sent before a message from the next block is sent.
    oneof state_diff_message {
        ContractDiff contract_diff = 1; // Multiple contract diffs for the same contract may appear continuously if the diff is too large.
        Fin          fin           = 2; // Fin is sent after the peer sent all the data or when it encountered a block that it doesn't have its state diff.
    }
}